--- a/scilab/modules/differential_equations/locales/en_US/differential_equations.pot
+++ b/scilab/modules/differential_equations/locales/en_US/differential_equations.pot
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-10-25 18:42+0100\n"
+"Revision-Date: 2009-10-27 03:43+0100\n"
 
 # File: macros/dae.sci, line: 168
 #, c-format
@@ -169,6 +169,18 @@ msgstr ""
 msgid "If the function is called without argument, default values are used"
 msgstr ""
 #
+# File: demos/ode/ode_lotka/ode_lotka.dem.sce, line: 55
+msgid "Lokta-Volterra vector field"
+msgstr ""
+#
+# File: demos/ode/ode_lorentz/ode_lorentz.dem.sce, line: 37
+msgid "Lorentz differential equation"
+msgstr ""
+#
+# File: demos/ode/ode_lorentz/ode_lorentz.dem.sce, line: 49
+msgid "Lorenz differential equation"
+msgstr ""
+#
 # File: macros/odeoptions.sci, line: 52
 msgid "Meaning of itask and tcrit:"
 msgstr ""
@@ -179,6 +191,10 @@ msgstr ""
 #
 # File: macros/odeoptions.sci, line: 67
 msgid "Meaning of ml,mu:"
+msgstr ""
+#
+# File: demos/ode/ode_1dvect/ode_1dvect.dem.sce, line: 43
+msgid "ODE 1D vector field"
 msgstr ""
 #
 # File: etc/differential_equations.start, line: 19
@@ -193,6 +209,10 @@ msgstr ""
 msgid "Sphere"
 msgstr ""
 #
+# File: demos/ode/ode_vanderpol/ode_vanderpol.dem.sce, line: 50
+msgid "Van der Pol vector field"
+msgstr ""
+#
 # File: macros/odeoptions.sci, line: 71
 msgid "a matrix J which is  ml+mu+1 x ny (where ny=dim of y in ydot=f(t,y))"
 msgstr ""
@@ -205,6 +225,11 @@ msgstr ""
 msgid "bike simulation, unstable trajectory"
 msgstr ""
 #
+# File: demos/ode/ode_chstiff/ode_chstiff.dem.sce, line: 32
+# File: demos/ode/ode_chimpl/ode_chimpl.dem.sce, line: 42
+msgid "chemical process (implicit)"
+msgstr ""
+#
 # File: macros/odeoptions.sci, line: 74
 msgid "column 2 is made of mu-1 zeros followed by df1/dx2, df2/dx2,etc"
 msgstr ""
@@ -215,6 +240,10 @@ msgstr ""
 #
 # File: macros/odeoptions.sci, line: 69
 msgid "of the banded jacobian: the band is the i,j''s with i-ml <= j <= ny-1"
+msgstr ""
+#
+# File: demos/dae/dae1/pend3d1.dem.sce, line: 104
+msgid "spherical pendulum simulation"
 msgstr ""
 #
 # File: macros/odeoptions.sci, line: 72
