--- a/scilab/modules/graphics/locales/en_US/graphics.pot
+++ b/scilab/modules/graphics/locales/en_US/graphics.pot
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-10-25 18:42+0100\n"
+"Revision-Date: 2009-10-27 03:43+0100\n"
 
 # File: sci_gateway/c/sci_drawaxis.c, line: 186
 msgid "%: Wrong value for %s '%c': '%s', '%s' and '%s' expected.\n"
@@ -1422,6 +1422,10 @@ msgstr ""
 # File: demos/misc/misc.dem.sci, line: 246
 # File: demos/misc.dem.sci, line: 248
 msgid "Copper"
+msgstr ""
+#
+# File: demos/cmplxfunc/demo_custom.dem.sce, line: 51
+msgid "Customize your complex function"
 msgstr ""
 #
 # File: src/c/InitObjects.c, line: 159
