--- a/scilab/modules/helptools/locales/en_US/helptools.pot
+++ b/scilab/modules/helptools/locales/en_US/helptools.pot
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-10-25 18:42+0100\n"
+"Revision-Date: 2009-10-27 03:43+0100\n"
 
 # File: macros/xmltoformat.sci, line: 401
 # File: macros/xmltoformat.sci, line: 428
@@ -321,7 +321,7 @@ msgstr ""
 #
 # File: sci_gateway/c/gw_helptools.c, line: 37
 #, c-format
-msgid "Scilab '%s' module disabled in -nogui or -nwni mode."
+msgid "Scilab '%s' module disabled in -nogui or -nwni mode.\n"
 msgstr ""
 #
 # File: sci_gateway/nogui/nogui.c, line: 20
