--- a/scilab/modules/signal_processing/locales/en_US/signal_processing.pot
+++ b/scilab/modules/signal_processing/locales/en_US/signal_processing.pot
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-10-25 18:42+0100\n"
+"Revision-Date: 2009-10-27 03:43+0100\n"
 
 # File: macros/cspect.sci, line: 67
 # File: macros/pspect.sci, line: 75
@@ -235,6 +235,42 @@ msgid ""
 "%s: Wrong values for input argument #%d: degree must be in the set {%s}.\n"
 msgstr ""
 #
+# File: demos/arma/arma3.dem.sce, line: 38
+msgid "Arma identifcation"
+msgstr ""
+#
 # File: etc/signal_processing.start, line: 25
 msgid "Signal Processing"
+msgstr ""
+#
+# File: demos/arma/arma3.dem.sce, line: 39
+msgid "Spectral power"
+msgstr ""
+#
+# File: demos/arma/arma3.dem.sce, line: 38
+msgid "Theoritical value"
+msgstr ""
+#
+# File: demos/arma/arma3.dem.sce, line: 38
+msgid "Using macro mese"
+msgstr ""
+#
+# File: demos/wiener.dem.sce, line: 85
+msgid "estimates xf"
+msgstr ""
+#
+# File: demos/wiener.dem.sce, line: 85
+msgid "estimates xs"
+msgstr ""
+#
+# File: demos/arma/arma3.dem.sce, line: 39
+msgid "frequency"
+msgstr ""
+#
+# File: demos/wiener.dem.sce, line: 85
+msgid "real state"
+msgstr ""
+#
+# File: demos/arma/arma3.dem.sce, line: 39
+msgid "spectral estimate"
 msgstr ""
