--- a/scilab/modules/xcos/locales/en_US/xcos.pot
+++ b/scilab/modules/xcos/locales/en_US/xcos.pot
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-10-25 18:42+0100\n"
+"Revision-Date: 2009-10-27 03:43+0100\n"
 
 # File: macros/generateBlockImages.sci, line: 27
 # File: macros/importScicosPal.sci, line: 27
@@ -22,8 +22,9 @@ msgstr ""
 msgid "%s: File ''%s'' does not exist.\n"
 msgstr ""
 #
-# File: sci_gateway/cpp/sci_Xcos.cpp, line: 73
-# File: sci_gateway/cpp/sci_Xcos.cpp, line: 88
+# File: sci_gateway/cpp/sci_Xcos.cpp, line: 76
+# File: sci_gateway/cpp/sci_Xcos.cpp, line: 93
+# File: sci_gateway/cpp/sci_Xcos.cpp, line: 102
 # File: sci_gateway/cpp/sci_xcosNotify.cpp, line: 80
 # File: sci_gateway/cpp/sci_xcosNotify.cpp, line: 95
 #, c-format
@@ -36,11 +37,15 @@ msgstr ""
 msgid "%s: Wrong number of input argument(s): %d expected.\n"
 msgstr ""
 #
-# File: sci_gateway/cpp/sci_Xcos.cpp, line: 115
+# File: sci_gateway/cpp/sci_Xcos.cpp, line: 142
 # File: sci_gateway/cpp/sci_xcosNotify.cpp, line: 59
 # File: sci_gateway/cpp/sci_xcosNotify.cpp, line: 73
 #, c-format
 msgid "%s: Wrong type for input argument #%d: A string expected.\n"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 96
+msgid "?"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 100
@@ -65,6 +70,10 @@ msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 55
 msgid "Block Parameters"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 165
+msgid "Border Color"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 162
@@ -215,6 +224,10 @@ msgstr ""
 msgid "File"
 msgstr ""
 #
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 166
+msgid "Fill Color"
+msgstr ""
+#
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 65
 msgid "Fit diagram to view"
 msgstr ""
@@ -239,8 +252,8 @@ msgstr ""
 msgid "Group"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 96
-msgid "Help"
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 170
+msgid "Horizontal"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 139
@@ -271,8 +284,8 @@ msgstr ""
 msgid "Left"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 165
-msgid "Line Color"
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 168
+msgid "Link Style"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 108
@@ -389,7 +402,7 @@ msgstr ""
 #
 # File: sci_gateway/c/gw_xcos.c, line: 37
 #, c-format
-msgid "Scilab '%s' module disabled in -nogui or -nwni mode."
+msgid "Scilab '%s' module disabled in -nogui or -nwni mode.\n"
 msgstr ""
 #
 # File: src/noxcos/noxcos.c, line: 19
@@ -441,6 +454,10 @@ msgstr ""
 msgid "Stop"
 msgstr ""
 #
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 169
+msgid "Straight"
+msgstr ""
+#
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 57
 msgid "Superblock mask"
 msgstr ""
@@ -483,6 +500,10 @@ msgstr ""
 msgid "User-Defined Functions"
 msgstr ""
 #
+# File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 171
+msgid "Vertical"
+msgstr ""
+#
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 64
 msgid "View"
 msgstr ""
@@ -496,6 +517,7 @@ msgid "Viewport"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xcos/utils/XcosMessages.java, line: 30
+# File: demos/xcos_demos.sce, line: 23
 msgid "Xcos"
 msgstr ""
 #
