--- a/scilab/modules/xpad/locales/en_US/xpad.pot
+++ b/scilab/modules/xpad/locales/en_US/xpad.pot
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-10-25 18:42+0100\n"
+"Revision-Date: 2009-10-27 03:43+0100\n"
 
 # File: src/java/org/scilab/modules/xpad/utils/XpadMessages.java, line: 116
 msgid ""
@@ -277,7 +277,7 @@ msgstr ""
 #
 # File: sci_gateway/c/gw_xpad.c, line: 39
 #, c-format
-msgid "Scilab '%s' module disabled in -nogui or -nwni mode."
+msgid "Scilab '%s' module disabled in -nogui or -nwni mode.\n"
 msgstr ""
 #
 # File: src/noxpad/noxpad.c, line: 19
