--- a/scilab_doc/neldermead/simplextheory/section-simplex.tex
+++ b/scilab_doc/neldermead/simplextheory/section-simplex.tex
@@ -216,7 +216,7 @@ optimum.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=7cm]{simplex_initialfixed.pdf}
+\includegraphics[width=7cm]{simplextheory/simplex_initialfixed.pdf}
 \end{center}
 \caption{Typical pattern with fixed-shape Spendley's et al algorithm}
 \label{fig-nm-simplex-fixedshape}
@@ -273,7 +273,7 @@ The regular simplex is presented in figure \ref{fig-nm-simplex-regular}.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=10cm]{simplex_regular.png}
+\includegraphics[width=10cm]{simplextheory/simplex_regular.png}
 \end{center}
 \caption{Regular simplex in 2 dimensions}
 \label{fig-nm-simplex-regular}
@@ -336,7 +336,7 @@ be used as a guess for the characteristic length scale of the problem.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=10cm]{simplex_axes.png}
+\includegraphics[width=10cm]{simplextheory/simplex_axes.png}
 \end{center}
 \caption{Axis-based simplex in 2 dimensions -- Notice that the length along the $x$ axis is 1 while the length
 along the $y$ axis is 2. }
@@ -499,7 +499,7 @@ with $\epsilon = 10^{-10}$. This simplex is presented in figure \ref{fig-simplex
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=5cm]{simplex_flat.pdf}
+\includegraphics[width=5cm]{simplextheory/simplex_flat.pdf}
 \end{center}
 \caption{A "flat" simplex in 2 dimensions}
 \label{fig-simplex-flat}
@@ -897,7 +897,7 @@ and its condition number increases dramatically.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=7cm]{simplex_towardflat.pdf}
+\includegraphics[width=7cm]{simplextheory/simplex_towardflat.pdf}
 \end{center}
 \caption{An axis-by-axis simplex which degenerates into a "flat" simplex in 2 dimensions.}
 \label{fig-simplex-towardflat}
