--- a/scilab_doc/neldermead/spendleymethod/method-spendley.tex
+++ b/scilab_doc/neldermead/spendleymethod/method-spendley.tex
@@ -152,7 +152,7 @@ however, any non degenerate simplex can be used.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=8cm]{spendley-steps.pdf}
+\includegraphics[width=8cm]{spendleymethod/spendley-steps.pdf}
 \end{center}
 \caption{Spendley et al. simplex moves}
 \label{fig-spendley-moves}
@@ -172,7 +172,7 @@ a shrink step is necessary, as presented in figure \ref{fig-spendley-moves-shrin
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=10cm]{spendley-steps-reflect.pdf}
+\includegraphics[width=10cm]{spendleymethod/spendley-steps-reflect.pdf}
 \end{center}
 \caption{Spendley et al. simplex moves -- Reflection with respect to highest point}
 \label{fig-spendley-moves-reflect}
@@ -180,7 +180,7 @@ a shrink step is necessary, as presented in figure \ref{fig-spendley-moves-shrin
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=10cm]{spendley-steps-reflect2.pdf}
+\includegraphics[width=10cm]{spendleymethod/spendley-steps-reflect2.pdf}
 \end{center}
 \caption{Spendley et al. simplex moves -- Reflection with respect to next-to-highest point. 
 It may happen that the next iteration is a shrink step.}
@@ -197,7 +197,7 @@ optimum is searched.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=8cm]{spendley-steps-shrink.pdf}
+\includegraphics[width=8cm]{spendleymethod/spendley-steps-shrink.pdf}
 \end{center}
 \caption{Spendley et al. simplex moves -- The shrink step is the 
 only possible move.}
@@ -332,7 +332,7 @@ been discussed.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=15cm]{quad2bis-spendley-simplexcontours.png}
+\includegraphics[width=15cm]{spendleymethod/quad2bis-spendley-simplexcontours.png}
 \end{center}
 \caption{Spendley et al. numerical experiment -- History of simplex}
 \label{fig-spendley-numexp1-historysimplex}
@@ -344,7 +344,7 @@ corresponds to a shrink in the algorithm.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=10cm]{quad2bis-spendley-history-sigma.png}
+\includegraphics[width=10cm]{spendleymethod/quad2bis-spendley-history-sigma.png}
 \end{center}
 \caption{Spendley et al. numerical experiment -- History of logarithm of the size of the simplex}
 \label{fig-spendley-numexp1-sigma}
@@ -356,7 +356,7 @@ figure \ref{fig-spendley-numexp1-logfopt}.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=10cm]{quad2bis-spendley-history-logfopt.png}
+\includegraphics[width=10cm]{spendleymethod/quad2bis-spendley-history-logfopt.png}
 \end{center}
 \caption{Spendley et al. numerical experiment -- History of logarithm of function}
 \label{fig-spendley-numexp1-logfopt}
@@ -467,7 +467,7 @@ which can vary its size, but not its shape.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=15cm]{quad2-spendley-simplexcontours.png}
+\includegraphics[width=15cm]{spendleymethod/quad2-spendley-simplexcontours.png}
 \end{center}
 \caption{Spendley et al. numerical experiment with $f(x_1,x_2) = a x_1^2 + x_2^2$ and $a=100$ -- History of simplex}
 \label{fig-spendley-numexp2-historysimplex}
@@ -720,7 +720,7 @@ $n$ & Function  & Iterations & $\rho(S_0,n)$\\
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=10cm]{spendley-dimension-nfevals.png}
+\includegraphics[width=10cm]{spendleymethod/spendley-dimension-nfevals.png}
 \end{center}
 \caption{Spendley et al. numerical experiment -- Number of function evaluations 
 depending on the number of variables}
